# chipmunk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  TODO.md  dev-environment.sh  docker-compose-dev.yml  docker-compose.yml  env.example  flake.nix  rust-toolchain.toml  rustfmt.toml  start-dev-environment.sh  start-zellij.sh  zellij-session.kdl
.sqlx/: query-021502c6bd5acc0e60a65e169dbcea14f1501b3070c8c98ddffdba2be1b0a3e1.json  query-0428113450f9459e4a3fe2fe4380e9458fdefee0e30f5d2f821da30b89ea07d3.json  query-04b1ae347e13c5f79e47bb384c7e73832e0b7e4fe82093d41dca03de331b443c.json  query-0e26268d84c2765c0d1c8f50182f31786ae98075fcae4112c6113452910975d3.json  query-132dd588fe6d665c26028a01c01a6112f90147ae7652437cf3410f9a03b0519e.json  query-16656ac1639bdd54a240d1c31edc5cc89b449cb428805f190463b537551fd060.json  query-1b609831a61c289ce97ea9d0fe03f30ae40dcee578c9a7755fc8b929b488517f.json  query-1d07614764e4547a26949dbfaf972965e51c1af329c7b3546cb1160c38d657ae.json  query-234bff8e6ca7312b8aa5d1d2a77acc300eab407d18eaea7362da42ff7a1c637c.json  query-274c5718b31111cbd9292e44459157719ff0a5226deaec88cee5e3d0484dfc32.json  query-2b0c5fe839686acb0876fe1e4a820b61d987712d1439269ce6e4e8402b098867.json  (+52 more)
chipmunk/: Cargo.toml
chipmunk/.sqlx/: query-1385f8e3eb1d7f4b63fa30f706753f4f90175aaaa05d386b880b05e64e639833.json  query-234bff8e6ca7312b8aa5d1d2a77acc300eab407d18eaea7362da42ff7a1c637c.json  query-29523b12bdb77ad3d72893f84238ceffa9f4831f6348e787ecc00294708d307b.json  query-3608569cd9e100da9df13393dc84be97e60d3c62984da17d8ba12856f6f6bfbf.json  query-3eba77c5ce72cee74dd2e9de18e6d000dae61bb48da6e540476cf8dad1e2a5f4.json  query-3f0314661fb18adbeb3cebb3c73f6ae6f88bbbfd059cbc31c61d4c64408893e6.json  query-4a263fdf0b4cb185e027f4baa235b7f45350acdc4fec60026f1686c83f7c6946.json  query-5be0c50721bd221d3604449484d0263b5ee21964cecb5f80b09dc06e6f37d81f.json  query-65f636199e07d14fe1d166a6335e126b6e37b6e1ff958f8785f2400e3fc19a1f.json  query-710688d40b62de1118c26a105a482dc54a994c6912de59401408646a13184be1.json  query-b9e78365a0bb3fcb32c33366701c107af61b55d930609ddcc2419d124384d296.json  query-d04afd7f3dba6b6d038f694db5088925b85bfda1a7abefbb2fbfcba9f9410a96.json  query-e12e7c317489f42abf7221fb1bf892be347883f308995db10f1294080901bf3e.json  query-f524e1b6f4f2eaa15ad6a156fb9e455318beb38b8e33a59bfc1db7f53820b6ad.json
chipmunk/migrations/: 20230300000000_create_users.down.sql  20230300000000_create_users.up.sql  20230300000001_types.down.sql  20230300000001_types.up.sql  20230400000000_car_settings_table.down.sql  20230400000000_car_settings_table.up.sql  20230400000001_cars_table.up.sql  20230400000002_geofences_table.down.sql  20230400000002_geofences_table.up.sql  20230400000003_settings_table.up.sql  20230400000004_addresses_table.up.sql  20230400000005_token_table.up.sql  20230400000006_positions_table.up.sql  20230400000007_drives_table.down.sql  20230400000007_drives_table.up.sql  20230400000008_positions_foreign_keys.down.sql  20230400000008_positions_foreign_keys.up.sql  20230400000009_charging_process_table.down.sql  20230400000009_charging_process_table.up.sql  20230400000010_charges_table.down.sql  20230400000010_charges_table.up.sql  20230400000011_states_table.up.sql  20230400000012_updates_table.up.sql  20230400000013_car_data_table.up.sql  20230400000014_extensions.down.sql  20230400000014_extensions.up.sql  20230400000015_conversion_functions.down.sql  20230400000015_conversion_functions.up.sql
chipmunk/src/: car.rs  charging.rs  config.rs  crypto.rs  environment.rs  lib.rs  logger.rs  main.rs  openstreetmap.rs  server.rs  task_data_polling.rs  task_data_processor.rs  task_data_streaming.rs  task_database.rs  task_web_server.rs  tasks.rs  utils.rs
chipmunk/src/database/: mod.rs  token.rs  traits.rs  types.rs
chipmunk/src/database/tables/: address.rs  car.rs  car_settings.rs  charges.rs  charging.rs  charging_db.rs  charging_process.rs  drive.rs  drive_db.rs  geofence.rs  mod.rs  position.rs  settings.rs  state.rs  swupdate.rs  token.rs  types.rs  vehicle_data.rs
chipmunk/src/database/teslamate/: charges.rs  charging_process.rs  drive.rs  mod.rs  position.rs
chipmunk/src/server/: mod.rs  status.rs
chipmunk/src/srtm/: mod.rs
chipmunk/src/srtm/source/: esa.rs  file.rs  mod.rs
chipmunk/src/utils/: crypto.rs  location.rs  mod.rs
chipmunk/tests/: charging_process.rs  data_logger.rs  driving_process.rs  state_changes_from_asleep.rs  state_transition.rs  state_transition_from_asleep.rs  state_transition_from_charging.rs  state_transition_from_drive.rs  state_transition_from_offline.rs  state_transition_from_parked.rs  state_transition_from_unknown.rs  teslamate.rs  test.rs  test_data.rs
chipmunk/tests/common/: mod.rs  osm_response.json  route.gpx  test_data.rs  utils.rs
grafana/: Dockerfile  dashboards.sh  (+2 more)
tesla_api/: Cargo.toml
tesla_api/src/: auth.rs  lib.rs  response_codes.rs  stream.rs  utils.rs  vehicle_data.rs
ui/backend/: Cargo.toml
ui/backend/src/: lib.rs  server.rs
ui/frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
ui/frontend/src/: components.rs  lib.rs  main.css  main.rs  websocket.rs
ui/frontend/src/components/: counter_btn.rs  logging_status.rs  map.rs  mod.rs  settings.rs
ui/frontend/src/pages/: geofence.rs  home.rs  mod.rs  not_found.rs  settings.rs
ui/frontend/style/: tailwind.css
(+35 files in other folders)
