[workspace]
members = ["chipmunk", "tesla_api", "ui/frontend", "ui/common"]
default-members = ["chipmunk"]
resolver = "2"

[workspace.dependencies]
tesla_api = { path = "tesla_api" }
ui_common = { path = "ui/common" }
log = "0.4.19"
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["json"] }
uuid = { version = "1.3.4", features = ["v4"] }
async-channel = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
opt-level = 0

# Optimize dependencies
[profile.dev.package."*"]
opt-level = 3
