[package]
name = "chipmunk"
version = "0.1.0"
edition = "2021"

[dependencies]
backend.workspace = true
tesla_api.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}

sqlx = { version = "0.7.3", features = ["postgres", "json", "runtime-tokio-native-tls", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
clap = { version = "4.2.1", features = ["derive"] }
openssl = "0.10.50"
rand = "0.8.5"
futures = "0.3.28"

[dev-dependencies]
gpx = "0.10.0"
mockito = "1.2.0"

[lib]
name = "chipmunk"
path = "src/lib.rs"

[[bin]]
name = "chipmunk"
path = "src/main.rs"
