cargo-features = ["edition2024"]

[package]
name = "tesla_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true     # Replace with thiserror
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true

thiserror = "1.0.40"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.3.1"

[lib]
name = "tesla_api"
path = "src/lib.rs"
