[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ui_common.workspace = true
tesla_api.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
uuid.workspace = true

futures-util = "0.3.28"
tokio-stream = "0.1.14"
warp = "0.3.5"
