[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
ui_common.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-channel.workspace = true

wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.5.0"
gloo-timers = "0.3.0"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
stylist = { version = "0.13.0", features = ["yew", "parser"] }
web-sys = { version = "0.3.64" }
