[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["rahul <jossb6cw@duck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui_common.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8", features = [] }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
console_error_panic_hook = "0.1"
leptos-use = { version = "0.16.2", features = ["ssr", "use_websocket"] }
leptos-leaflet = "0.10.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
